--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         
         <section id="apresentar">
-        <h1 style="text-align: center;">Oi oi, Eu sou Jovane</h1>
+        <h1 style="text-align: center;">Oi, Eu sou Jovane</h1>
         <h3>um desenvolvedor web iniciante</h3>
         </section>
         </header>
