--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <header>
 
         <nav class="navbar">
-            <img src="images/jota.png" alt="Logo de Jovane" width="35px" style="padding: 8px">
-            <a href="#contato">Contato</a>
-            <a href="#projeto">Projetos</a>
-            <a href="#sobre">Sobre</a>
+            <div id="menu">
+                 <img src="images/jota.png" alt="Logo de Jovane" width="35px" style="padding: 8px">
+                    <a href="#contato">Contato</a>
+                    <a href="#projeto">Projetos</a>
+                    <a href="#sobre">Sobre</a>
+            </div> 
         </nav>
         
         <section id="apresentar">
