--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </p>
         </div>
         <div id="hab">
-            <h2>Ferramentas e Habilidades</h2><br>
+            <h2>Ferramentas e Habilidades</h2>
             <ul style="color: aliceblue; margin-left: 60px;">
                 <li>VIM</li>
                 <li>Sublime Text</li>
@@ -88,7 +88,7 @@
         <br>
         <br>
         <div id="contato">
-            <h2>Vamos trabalhar juntos...</h2>
+            <h1>Vamos trabalhar juntos...</h1>
             <p><em>É só entrar em contato</em></p><br><br>
             
             <div id="contatoImg">
