--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <header>
            
-           <div class="navbar">
+            <div class="navbar">
                 <img src="images/jota.png" alt="Logo de Jovane" width="35px" style="padding: 8px">
                <div id="menu">
                     <a href="#contato">Contato</a>
@@ -30,7 +30,7 @@
             </div>
         
             <section id="apresentar">
-                <h1 style="text-align: ;">Olá, eu sou Jovane</h1>
+                <h1><br>Olá, eu sou Jovane</h1>
                 <h3>um desenvolvedor web iniciante</h3>
             </section>
         </header>
