--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
             <div id="imc" class="item"><a href="https://tender-easley-994bf4.netlify.com/"><img src="images/imcWebApp.png" alt="IMC" width="100%" height="100%"></a>
             <a href="https://tender-easley-994bf4.netlify.com/">IMC</a></div>
 
-             <div id="gastos" class="item"><a href="https://gastosmensais.000webhostapp.com/"><img src="images/firstPHPMySQL.png" alt="gastos" width="100%" height="100%"></a>
+            <div id="gastos" class="item"><a href="https://gastosmensais.000webhostapp.com/"><img src="images/firstPHPMySQL.png" alt="gastos" width="100%" height="100%"></a>
             <a href="https://gastosmensais.000webhostapp.com/">1º PHP/MySQL</a></div>
+            
+            <div id="vim" class="item"><a href="https://awesome-perlman-211a20.netlify.com/"><img src="images/vim.png" alt="vim" width="100%" height="100%"></a>
+            <a href="https://awesome-perlman-211a20.netlify.com/">VIM</a></div>
+
         </div> 
             </section>
             <br>
