--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             
             <div id="vim" class="item"><a href="https://awesome-perlman-211a20.netlify.com/"><img src="images/vim.png" alt="vim" width="100%" height="100%"></a>
             <a href="https://awesome-perlman-211a20.netlify.com/">VIM</a></div>
+            
+            <div id="susi" class="item"><a href="https://susipessoa.000webhostapp.com/"><img src="images/susi.png" alt="Susi" width="100%" height="100%"></a>
+            <a href="https://awesome-perlman-211a20.netlify.com/">VIM</a></div>
 
         </div> 
             </section>
