--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a href="https://awesome-perlman-211a20.netlify.com/">VIM</a></div>
             
             <div id="susi" class="item"><a href="https://susipessoa.000webhostapp.com/"><img src="images/susi.png" alt="Susi" width="100%" height="100%"></a>
-            <a href="https://awesome-perlman-211a20.netlify.com/">VIM</a></div>
+            <a href="https://awesome-perlman-211a20.netlify.com/">Susi</a></div>
 
         </div> 
             </section>
