--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/x-icon" href="images/jota.ico">
     <link rel="stylesheet" href="style.css" media="screen">
 
     <title>Portfolio de Jovane</title>
