--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
             <section id="apresentar">
                 <h1><br>Olá, eu sou Jovane</h1>
-                <h3>um desenvolvedor web iniciante</h3>
+                <h3>um desenvolvedor web junior</h3>
             </section>
         </header>
             <br>
@@ -75,11 +75,14 @@
             <div id="grid-sobre">
                 <div id="hist">
                     <h2>Eu sou Jovane Rocha, 
-                    um desenvolvedor web freelancer iniciante.</h2>
+                    um desenvolvedor web freelancer junior.</h2>
                     <p style="color: aliceblue;">Comecei a estudar programação em 2015 (Python, Java e C).
                     Depois de muitos (inúmeros) tutoriais e alguns cursos, adquiri
                     experiêcia no básico de lógica de programação. Foi desenvolvendo 
-                    um site em Flask em 2019 que entrei em contato de verdade com HTML e depois disso não mais parei de estudar e aprender front-end development. Com mais outros cursos de back-end no final de 2019, já posso me considerar um full-stack iniciante.<br><br> Tenho disponibilidade para trabalhos remotos. Se tiver algum interesse, por favor entre em <a href="#contato"><u>contato</u></a>.
+                    um site em Flask em 2019 que entrei em contato de verdade com HTML e depois disso
+                    não mais parei de estudar e aprender front-end development. 
+                    Com mais outros cursos de back-end no final de 2019, já posso me considerar um dev full-stack.<br><br> 
+                    Tenho disponibilidade para trabalhos remotos. Se tiver algum interesse, por favor entre em <a href="#contato"><u>contato</u></a>.
                     </p>
                 </div>
             
