--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             
             <div id="susi" class="item"><a href="https://susipessoa.000webhostapp.com/"><img src="images/susi.png" alt="Susi" width="100%" height="100%"></a>
             <a href="https://awesome-perlman-211a20.netlify.com/">Susi</a></div>
+            
+            <div id="hcode" class="item"><a href="https://naughty-wescoff-cae4d2.netlify.com/"><img src="images/hcode.png" alt="Hcode-CalculadoraJS" width="100%" height="100%"></a>
+            <a href="https://naughty-wescoff-cae4d2.netlify.com/">Calculadora JS HCode</a></div>
+
 
         </div> 
             </section>
