--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     um desenvolvedor web freelancer junior.</h2>
                     <p style="color: aliceblue;">Comecei a estudar programação em 2015 (Python, Java e C).
                     Depois de muitos (inúmeros) tutoriais e alguns cursos, adquiri
-                    experiêcia no básico de lógica de programação. Foi desenvolvendo 
+                    experiência no básico de lógica de programação. Foi desenvolvendo 
                     um site em Flask em 2019 que entrei em contato de verdade com HTML e depois disso
                     não mais parei de estudar e aprender front-end development. 
                     Com mais outros cursos de back-end no final de 2019, já posso me considerar um dev full-stack.<br><br> 
