--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                <div id="menu">
                     <a href="#contato">Contato</a>
                     <a href="#projeto">Projetos</a>
-                    <a href="#sobre">Sobre</a>
+                    <a href="#hist">Sobre</a>
                </div>
                
             </div>
