carousel img center

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
                     <li>Python (iniciante)</li>
                     <li>PHP</li>
                     <li>MySQL</li>
+                    <li>Git</li>
                 </ul>
             </div>
         </div>
