fixing img address

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevJovane Portfolio</title>
-    <link rel="shortcut icon" type="image/x-icon" href="img/jota.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/jcgsr.github.io/img/jota.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -40,7 +40,7 @@
             Olá, eu sou <strong>Jovane Rocha</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-        <img src="img/jovane&diana.jpg" alt="Foto de Jovane" class="intro__img" data-aos="fade-left">
+        <img src="/jcgsr.github.io/img/jovane&diana.jpg" alt="Foto de Jovane" class="intro__img" data-aos="fade-left">
     </section>
 
     <!-- Services -->
@@ -90,7 +90,7 @@
                 Vegetariano, Enxadrista, Schopenhauriano, Socrático, Guitarrista (admirador da Les Paul), Bebedor de Whisky. Atualmente, moro em Aracaju, mas doido para voltar para Pernambuco. Usuário Linux desde sempre, usando Mint desde 2018. Estudando feito um louco JavaScript para poder realizar meu objetivo de me tornar um programador profissional. 
             </p>
         </div>
-        <img src="img/semi-opened-laptop-computer-turned-on-on-table-2047905.jpg" alt="Semi opened laptop"
+        <img src="/jcgsr.github.io/img/semi-opened-laptop-computer-turned-on-on-table-2047905.jpg" alt="Semi opened laptop"
             class="about-me__img">
     </section>
 
@@ -103,55 +103,55 @@
 
             <!-- Portfolio item 01-->
             <a href="https://quirky-fermi-9dd416.netlify.com/" class="portfolio__item">
-                <img src="img/piriquitaWebApp.png" alt="Site da Piriquita" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/piriquitaWebApp.png" alt="Site da Piriquita" class="portfolio__img">
             </a>
             <!-- Portfolio item 02-->
             <a href="https://hardcore-euclid-fca293.netlify.com/" class="portfolio__item">
-                <img src="img/negaoWebApp.png" alt="Site do Negão" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/negaoWebApp.png" alt="Site do Negão" class="portfolio__img">
             </a>
             <!-- Portfolio item 03-->
             <a href="https://goofy-poincare-70cae0.netlify.com/" class="portfolio__item">
-                <img src="img/mediaEscolarWebApp.png" alt="Média Escolar" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/mediaEscolarWebApp.png" alt="Média Escolar" class="portfolio__img">
             </a>
             <!-- Portfolio item 04-->
             <a href="https://cocky-kalam-e5a441.netlify.com/index.html" class="portfolio__item">
-                <img src="img/afinadorWebApp.png" alt="Afinador de Violão" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/afinadorWebApp.png" alt="Afinador de Violão" class="portfolio__img">
             </a>
             <!-- Portfolio item 05-->
             <a href="https://tender-easley-994bf4.netlify.com/" class="portfolio__item">
-                <img src="img/imcWebApp.png" alt="IMC" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/imcWebApp.png" alt="IMC" class="portfolio__img">
             </a>
             <!-- Portfolio item 06-->
             <a href="https://gastosmensais.000webhostapp.com/" class="portfolio__item">
-                <img src="img/firstPHPMySQL.png" alt="Gastos Mensais" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/firstPHPMySQL.png" alt="Gastos Mensais" class="portfolio__img">
             </a>
             <!-- Portfolio item 07-->
             <a href="https://awesome-perlman-211a20.netlify.com/" class="portfolio__item">
-                <img src="img/vim.png" alt="VIM" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/vim.png" alt="VIM" class="portfolio__img">
             </a>
             <!-- Portfolio item 08-->
             <a href="https://susipessoa.000webhostapp.com/" class="portfolio__item">
-                <img src="img/susi.png" alt="Susi" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/susi.png" alt="Susi" class="portfolio__img">
             </a>
             <!-- Portfolio item 09-->
             <a href="https://naughty-wescoff-cae4d2.netlify.com/" class="portfolio__item">
-                <img src="img/hcode.png" alt="Hcode-CalculadoraJS" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/hcode.png" alt="Hcode-CalculadoraJS" class="portfolio__img">
             </a>
             <!-- Portfolio item 10-->
             <a href="https://eloquent-euler-c35730.netlify.com/" class="portfolio__item">
-                <img src="img/convjs.png" alt="Conversor JS" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/convjs.png" alt="Conversor JS" class="portfolio__img">
             </a>
             <!-- Portfolio item 11-->
             <a href="https://cranky-wright-340a76.netlify.com/" class="portfolio__item">
-                <img src="img/dict.png" alt="Extra School Material" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/dict.png" alt="Extra School Material" class="portfolio__img">
             </a>
             <!-- Portfolio item 12-->
             <a href="https://stoic-heyrovsky-2c9c27.netlify.com/" class="portfolio__item">
-                <img src="img/resZends.png" alt="The ResZends" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/resZends.png" alt="The ResZends" class="portfolio__img">
             </a>
 
             <a href="https://dreamy-mestorf-f645a7.netlify.com/" class="portfolio__item">
-                <img src="img/tarefaLista.png" alt="Lista Tarefa JS" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/tarefaLista.png" alt="Lista Tarefa JS" class="portfolio__img">
             </a>
 
         </div>
