--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="service">
                 <h3>Web Developer</h3>
-                <p data-aos="fade-left">
+                <p data-aos="fade-down">
                     Comecei a estudar Python, Java e C em 2015 por hobby e, com isso, adquiri experiência no básico de lógica de programação. Foi desenvolvendo meu primeiro site em Flask (2019) que entrei em contato com HTML. Depois disso, não mais parei de estudar e aprender front-end development. Atualmente, estou estudando JavaScript, HTML5 e CSS3 para me aprimorar cada vez mais. O Próximo passo será Node.js para dominar o back-end e me tornar um desenvolvedor full stack.
                 </p>
             </div>
