--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <p data-aos="fade-left">
                     Dei aula de Inglês (cursinhos e particular) de 2006 a 2013. Ainda em 2013,
                     ingressei no ensino público, no qual estou até hoje como professor 
-                    consursado nos municípios de Riachuelo e Lagarto em Sergipe.
+                    concursado nos municípios de Riachuelo e Lagarto em Sergipe.
                 </p>
             </div>
         </div>
