--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
 
             <p>
                 Pernambucano do Recife, Alvirrubro, Pai (abestalhado) de Diana,
-                Vegetariano, Enxadrista, Schopenhauriano, Socrático, Guitarrista (admirador da Les Paul), Bebedor de Whisky. Atualmente, moro em Aracaju, mas doido para voltar para Pernambuco. Usuário Linux desde sempre, usando Mint desde 2018. Estudando feito um louco JavaScript para poder realizar meu objetivo de me tornar um programador profissional. 
+                Vegetariano, Defensor dos Direitos dos Animais, Enxadrista, Schopenhauriano, Socrático, 
+                Guitarrista (admirador da Les Paul), Bebedor de Whisky. 
+                Atualmente, moro em Aracaju, mas doido para voltar para Pernambuco. 
+                Usuário Linux desde sempre, usando Mint desde 2018. 
+                Estudando feito um louco JavaScript para poder realizar meu objetivo de me tornar um programador profissional. 
             </p>
         </div>
         <img src="/jcgsr.github.io/img/semi-opened-laptop-computer-turned-on-on-table-2047905.jpg" alt="Semi opened laptop"
