--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
                     <i class="fab fa-whatsapp"></i>
                 </a>
             </li>
+            <li class="social-list__item">
+                <a href="https://facebook.com/cabral8guerra" class="social-list__link">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </li>
         </ul>
     </footer>
 
