--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="about-me__body">
 
             <p>
-                Pernambucano do Recife, Alvirrubro, Pai (abestalhado) de Diana, de três cachorros e de uma gata,
+                Pernambucano do Recife, Alvirrubro, Pai (abestalhado) de Diana, Beethoven, Mozart, Brenda Nina e Mia,
                 Vegetariano, Defensor dos Direitos dos Animais, Enxadrista, Schopenhauriano, Socrático, 
                 Guitarrista (admirador da Les Paul), Bebedor de Whisky. 
                 Atualmente, moro em Aracaju, mas doido para voltar para Pernambuco. 
@@ -117,7 +117,7 @@
                 <img src="/jcgsr.github.io/img/negaoWebApp.png" alt="Site do Negão" class="portfolio__img">
             </a>
             <!-- Portfolio item 03 -->
-            <a href="https://goofy-poincare-70cae0.netlify.com/" class="portfolio__item">
+            <a href="https://cranky-franklin-433edf.netlify.app/" class="portfolio__item">
                 <img src="/jcgsr.github.io/img/mediaEscolarWebApp.png" alt="Média Escolar" class="portfolio__img">
             </a>
             <!-- Portfolio item 04 -->
