--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="service">
                 <h3>Web Developer</h3>
                 <p data-aos="fade-down">
-                    Comecei a estudar Python, Java e C em 2015 por hobby e, com isso, adquiri experiência no básico de lógica de programação. Foi desenvolvendo meu primeiro site em Flask (2019) que entrei em contato com HTML. Depois disso, não mais parei de estudar e aprender front-end development. Atualmente, estou estudando JavaScript, HTML5 e CSS3 para me aprimorar cada vez mais. O Próximo passo será Node.js para dominar o back-end e me tornar um desenvolvedor full stack.
+                    Comecei a estudar Python, Java e C em 2015 por hobby e, com isso, adquiri experiência no básico de lógica de programação. Foi desenvolvendo meu primeiro site em Flask (2019) que entrei em contato com HTML. Depois disso, não mais parei de estudar e aprender front-end development. Depois de dominar JavaScript, HTML5 e CSS3, estou me dedicando ao estudo do Vue.js.
                 </p>
             </div>
             <div class="service">
@@ -129,7 +129,7 @@
                 <img src="/jcgsr.github.io/img/imcWebApp.png" alt="IMC" class="portfolio__img">
             </a>                       
             <!-- Portfolio item 06 -->
-            <a href="https://susipessoa.000webhostapp.com/" class="portfolio__item">
+            <a href="https://tender-saha-c9254d.netlify.app/#/" class="portfolio__item">
                 <img src="/jcgsr.github.io/img/susi.png" alt="Susi" class="portfolio__img">
             </a>
             <!-- Portfolio item 07 -->
