--- a/eng.html
+++ b/eng.html
@@ -61,7 +61,7 @@
             <div class="service">
                 <h3>Web Developer</h3>
                 <p data-aos="fade-down">
-                    I started studying Python, Java and C in 2015 as a hobby. By doing this, I acquired experience in the basics of programming logic. It was developing my first website in Flask (2019) that I got in touch with HTML. After that, I never stopped studying and learning front-end development. I am currently studying JavaScript, HTML5 and CSS3 to improve myself more and more. The next step will be Node.js to master the back-end and become a full stack developer.
+                    I started studying Python, Java and C in 2015 as a hobby and, because of that, I acquired experience in the basics of programming logic. It was developing my first website in Flask (2019) that I got in touch with HTML. After that, I never stopped studying and learning front-end development. After mastering JavaScript, HTML5 and CSS3, I am dedicating myself to the study of Vue.js.
                 </p>
             </div>
             <div class="service">
@@ -133,6 +133,11 @@
             <!-- Portfolio item 09-->
             <a href="https://dreamy-mestorf-f645a7.netlify.com/" class="portfolio__item">
                 <img src="/jcgsr.github.io/img/tarefaLista.png" alt="Lista Tarefa JS" class="portfolio__img">
+            </a>
+
+            <!-- Portfolio item 10-->
+            <a href="https://zealous-bohr-5f2b4a.netlify.app/" class="portfolio__item">
+                <img src="/jcgsr.github.io/img/ConversorVue.png" alt="Conversor Vue" class="portfolio__img">
             </a>
 
         </div>
