--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
                 <img src="/jcgsr.github.io/img/tarefaLista.png" alt="Lista Tarefa JS" class="portfolio__img">
             </a>
 
+            <!-- Portfolio item 10-->
+            <a href="https://zealous-bohr-5f2b4a.netlify.app/" class="portfolio__item">
+                <img src="/jcgsr.github.io/img/ConversorVue.png" alt="Conversor Vue" class="portfolio__img">
+            </a>
+
         </div>
         <p id="date"></p>
     </section>
