meta tags, new portfolio  items

--- a/eng.html
+++ b/eng.html
@@ -7,7 +7,14 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevJovane Portfolio</title>
+    <title>Jovane Portfolio</title>
+    <meta name="description" content="Jovane's Portfolio">
+    <meta name="author" content="Jovane Cabral Guerra da Silva Rocha"> 
+    <meta name="keywords" content="Jovane, Portfolio, Web Developer, Translator, Teacher, English, Aracaju">
+    <meta property="og:title" content="Jovane Web Developer">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Jovane Web Developer">
+    <meta name="twitter:description" content="Jovane's Portfolio">
     <link rel="shortcut icon" type="image/x-icon" href="/jcgsr.github.io/img/jota.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -152,6 +159,16 @@
             <!-- Portfolio item 10-->
             <a href="https://zealous-bohr-5f2b4a.netlify.app/" class="portfolio__item">
                 <img src="/jcgsr.github.io/img/ConversorVue.png" alt="Conversor Vue" class="portfolio__img">
+            </a>
+
+             <!-- Portfolio item 11 -->
+            <a href="https://practical-engelbart-d9a318.netlify.app/">
+                <img src="/jcgsr.github.io/img/delicia.png" alt="Personal Trainer" class="portfolio__img">
+            </a>
+
+             <!-- Portfolio item 12 -->
+            <a href="https://brave-fermat-7d8989.netlify.app/">
+                <img src="/jcgsr.github.io/img/escurinha.png" alt="Clara Azevedo Fisioterapeuta" class="portfolio__img">
             </a>
 
         </div>
