--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!-- 09.04.2020 novo portfólio, concluído e publicado em 11.04.2020 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevJovane Portfolio</title>
+    <title>Jovane Desenvolvedor Web</title>
+    <meta name="description" content="Portfólio de Jovane">
+    <meta name="author" content="Jovane Cabral Guerra da Silva Rocha"> 
+    <meta name="keywords" content="Jovane, Portfólio, Desenvolvedor Web, Tradutor, Professor, Inglês, Aracaju">
+    <meta property="og:title" content="Jovane Desenvolvedor Web">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Jovane Desenvolvedor Web">
+    <meta name="twitter:description" content="Portfólio de Jovane">
     <link rel="shortcut icon" type="image/x-icon" href="/jcgsr.github.io/img/jota.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -151,9 +158,19 @@
                 <img src="/jcgsr.github.io/img/ListaTarefaVue.png" alt="Lista de Tarefa Vue" class="portfolio__img">
             </a>
 
-            <!-- Portfolio item 10-->
+            <!-- Portfolio item 10 -->
             <a href="https://zealous-bohr-5f2b4a.netlify.app/" class="portfolio__item">
                 <img src="/jcgsr.github.io/img/ConversorVue.png" alt="Conversor Vue" class="portfolio__img">
+            </a> 
+
+            <!-- Portfolio item 11 -->
+            <a href="https://practical-engelbart-d9a318.netlify.app/">
+                <img src="/jcgsr.github.io/img/delicia.png" alt="Personal Trainer" class="portfolio__img">
+            </a>
+
+            <!-- Portfolio item 12 -->
+            <a href="https://brave-fermat-7d8989.netlify.app/">
+                <img src="/jcgsr.github.io/img/escurinha.png" alt="Clara Azevedo Fisioterapeuta" class="portfolio__img">
             </a>
 
         </div>
