bug portfolio items

--- a/eng.html
+++ b/eng.html
@@ -124,7 +124,7 @@
             </a>
             <!-- Portfolio item 02 -->
             <a href="https://dreamy-mestorf-f645a7.netlify.com/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/tarefaLista.png" alt="Lista Tarefa JS" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/tarefaJS.png" alt="Lista Tarefa JS" class="portfolio__img">
             </a>
             <!-- Portfolio item 03 -->
             <a href="https://goofy-poincare-70cae0.netlify.com/" class="portfolio__item">
@@ -162,12 +162,12 @@
             </a>
 
              <!-- Portfolio item 11 -->
-            <a href="https://practical-engelbart-d9a318.netlify.app/">
+            <a href="https://practical-engelbart-d9a318.netlify.app/" class="portfolio__item">>
                 <img src="/jcgsr.github.io/img/delicia.png" alt="Personal Trainer" class="portfolio__img">
             </a>
 
              <!-- Portfolio item 12 -->
-            <a href="https://brave-fermat-7d8989.netlify.app/">
+            <a href="https://brave-fermat-7d8989.netlify.app/" class="portfolio__item">>
                 <img src="/jcgsr.github.io/img/escurinha.png" alt="Clara Azevedo Fisioterapeuta" class="portfolio__img">
             </a>
 
