--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </a>
             <!-- Portfolio item 02 -->
             <a href="https://dreamy-mestorf-f645a7.netlify.com/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/tarefaLista.png" alt="Lista Tarefa JS" class="portfolio__img">
+                <img src="/jcgsr.github.io/img/tarefaJS.png" alt="Lista Tarefa JS" class="portfolio__img">
             </a>
             <!-- Portfolio item 03 -->
             <a href="https://cranky-franklin-433edf.netlify.app/" class="portfolio__item">
