--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
             </a> 
 
             <!-- Portfolio item 11 -->
-            <a href="https://practical-engelbart-d9a318.netlify.app/">
+            <a href="https://practical-engelbart-d9a318.netlify.app/" class="portfolio__item">
                 <img src="/jcgsr.github.io/img/delicia.png" alt="Personal Trainer" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 12 -->
-            <a href="https://brave-fermat-7d8989.netlify.app/">
+            <a href="https://brave-fermat-7d8989.netlify.app/" class="portfolio__item">
                 <img src="/jcgsr.github.io/img/escurinha.png" alt="Clara Azevedo Fisioterapeuta" class="portfolio__img">
             </a>
 
