--- a/eng.html
+++ b/eng.html
@@ -10,7 +10,7 @@
     <title>Jovane Portfolio</title>
     <meta name="description" content="Jovane's Portfolio">
     <meta name="author" content="Jovane Cabral Guerra da Silva Rocha"> 
-    <meta name="keywords" content="Jovane, Portfolio, Web Developer, Translator, Teacher, English, Aracaju">
+    <meta name="keywords" content="Jovane, Portfolio, Web Developer, Vue.js, Translator, Teacher, English, Aracaju">
     <meta property="og:title" content="Jovane Web Developer">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Jovane Web Developer">
@@ -102,9 +102,7 @@
             <p>
                 Born in the State of Pernambuco, in the city of Recife, Alvirrubro, Father (dazzled) of Diana,
                 Vegetarian, Animal Rights Defender , Chess Player, Schopenhaurian, Socratic, Guitarist (admirer of Les
-                Paul), Whiskey Drinker. Atualmente, moro em Aracaju, mas doido para voltar para Pernambuco. Usuário
-                Linux desde sempre, usando Mint desde 2018. Estudando feito um louco JavaScript para poder realizar meu
-                objetivo de me tornar um programador profissional.
+                Paul), Whiskey Drinker. Currently, I live in Aracaju, but crazy to go back to Pernambuco. Linux user since always, using Ubuntu since 2018. Studying Vue.js to be able to achieve my goal of becoming a professional programmer. 
             </p>
         </div><!-- My Work -->
         <img src="/jcgsr.github.io/img/semi-opened-laptop-computer-turned-on-on-table-2047905.jpg"
