--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Jovane Desenvolvedor Web</title>
     <meta name="description" content="Portfólio de Jovane">
     <meta name="author" content="Jovane Cabral Guerra da Silva Rocha"> 
-    <meta name="keywords" content="Jovane, Portfólio, Desenvolvedor Web, Tradutor, Professor, Inglês, Aracaju">
+    <meta name="keywords" content="Jovane, Portfólio, Desenvolvedor Web, Vue.js, Tradutor, Professor, Inglês, Aracaju">
     <meta property="og:title" content="Jovane Desenvolvedor Web">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Jovane Desenvolvedor Web">
@@ -104,9 +104,8 @@
                 Vegetariano, Defensor dos Direitos dos Animais, Enxadrista, Schopenhauriano, Socrático,
                 Guitarrista (admirador da Les Paul), Bebedor de Whisky.
                 Atualmente, moro em Aracaju, mas doido para voltar para Pernambuco.
-                Usuário Linux desde sempre, usando Mint desde 2018.
-                Estudando feito um louco JavaScript para poder realizar meu objetivo de me tornar um programador
-                profissional.
+                Usuário Linux desde sempre, usando Ubuntu.
+                Estudando Vue.js para poder realizar meu objetivo de me tornar um programador profissional.
             </p>
         </div>
         <img src="/jcgsr.github.io/img/semi-opened-laptop-computer-turned-on-on-table-2047905.jpg"
