--- a/eng.html
+++ b/eng.html
@@ -102,7 +102,7 @@
             <p>
                 Born in the State of Pernambuco, in the city of Recife, Alvirrubro, Father (dazzled) of Diana,
                 Vegetarian, Animal Rights Defender , Chess Player, Schopenhaurian, Socratic, Guitarist (admirer of Les
-                Paul), Whiskey Drinker. Currently, I live in Aracaju, but crazy to go back to Pernambuco. Linux user since always, using Ubuntu since 2018. Studying Vue.js to be able to achieve my goal of becoming a professional programmer. 
+                Paul), Whiskey Drinker. I currently live in Aracaju, but crazy to go back to Pernambuco. Linux user since always, using Ubuntu since 2018. Studying Vue.js to be able to achieve my goal of becoming a professional programmer. 
             </p>
         </div><!-- My Work -->
         <img src="/jcgsr.github.io/img/semi-opened-laptop-computer-turned-on-on-table-2047905.jpg"
