--- a/eng.html
+++ b/eng.html
@@ -52,7 +52,7 @@
         </h1>
         <p class="section__subtitle section__subtitle--intro">front-end dev</p><!-- Services -->
         <img src="/jcgsr.github.io/img/jovane&amp;diana.jpg" alt="Jovane's Picture" class="intro__img"
-            data-aos="fade-left">
+        data-aos="fade-left">
     </section>
 
 
@@ -62,17 +62,17 @@
             <div class="service">
                 <h3>English-Portuguese Translator</h3>
                 <p data-aos="fade-right">
-                    Over 10 years of experience translating English to Portuguese. I Translate <i> abstracts </i> ,
-                    books, documents. CAT Tool: <a href="https://omegat.org/"> OmegaT </a> . I also work with
-                    subtitling. I am currently doing postgraduate studies in translation in<a
-                        href="https://portal.fanese.edu.br/"> Fanese </a> .
+                    03 years of experience translating English to Portuguese. I Translate <i> abstracts </i>,
+                    books, documents. CAT Tools: <a href="https://omegat.org/"> OmegaT </a>, <a href="https://www.sdltrados.com/">Trados</a> and <a href="https://www.smartcat.com/?utm_source=google&utm_medium=cpc&utm_campaign=EN_Brand&utm_term=smartcat&hsa_kw=smartcat&hsa_grp=24665534113&hsa_ver=3&hsa_net=adwords&hsa_mt=e&hsa_src=g&hsa_cam=370538953&hsa_acc=6400631428&hsa_ad=213078100943&hsa_tgt=kwd-60896128&gclid=CjwKCAiAiML-BRAAEiwAuWVggsUbDjoRpR8nUgOoe3Uw6Aqy1YUABn0CqwmZ5f89qSLzwLjQapuC9RoC_bEQAvD_BwE">Smartcat</a>. I also work with
+                    subtitling. I have agraduate degree in Translation from<a
+                    href="https://portal.fanese.edu.br/"> Fanese </a>.
 
                 </p>
             </div>
             <div class="service">
                 <h3>Web Developer</h3>
                 <p data-aos="fade-down">
-                    I started studying Python, Java and C in 2015 as a hobby and, because of that, I acquired experience
+                    I started studying Python, Java and C in 2015 (I am still studying them) as a hobby and, because of that, I acquired experience
                     in the basics of programming logic. It was developing my first website in Flask (2019) that I got in
                     touch with HTML. After that, I never stopped studying and learning front-end development. After
                     mastering JavaScript, HTML5 and CSS3, I am dedicating myself to the study of Vue.js.
@@ -106,7 +106,7 @@
             </p>
         </div><!-- My Work -->
         <img src="/jcgsr.github.io/img/semi-opened-laptop-computer-turned-on-on-table-2047905.jpg"
-            alt="Semi opened laptop" class="about-me__img">
+        alt="Semi opened laptop" class="about-me__img">
     </section>
 
 
@@ -159,12 +159,12 @@
                 <img src="/jcgsr.github.io/img/ConversorVue.png" alt="Conversor Vue" class="portfolio__img">
             </a>
 
-             <!-- Portfolio item 11 -->
+            <!-- Portfolio item 11 -->
             <a href="https://practical-engelbart-d9a318.netlify.app/" class="portfolio__item">>
                 <img src="/jcgsr.github.io/img/delicia.png" alt="Personal Trainer" class="portfolio__img">
             </a>
 
-             <!-- Portfolio item 12 -->
+            <!-- Portfolio item 12 -->
             <a href="https://brave-fermat-7d8989.netlify.app/" class="portfolio__item">>
                 <img src="/jcgsr.github.io/img/escurinha.png" alt="Clara Azevedo Fisioterapeuta" class="portfolio__img">
             </a>
@@ -202,22 +202,22 @@
             </li>
             <li class="social-list__item">
                 <a href="https://api.whatsapp.com/send?phone=5579988284730&amp;text=Entrar em contato"
-                    class="social-list__link">
-                    <i class="fab fa-whatsapp"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a href="https://facebook.com/cabral8guerra" class="social-list__link">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-            </li>
-        </ul>
-    </footer>
+                class="social-list__link">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+        </li>
+        <li class="social-list__item">
+            <a href="https://facebook.com/cabral8guerra" class="social-list__link">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+        </li>
+    </ul>
+</footer>
 
 
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="scriptEng.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="scriptEng.js"></script>
 </body>
 
 </html>
