--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
             <div class="service">
                 <h3>Tradutor Inglês-Português</h3>
                 <p data-aos="fade-right">
-                    Mais de 10 anos de experiência com tradução no par
+                    03 anos de experiência com tradução no par
                     Inglês-Português. Traduzo <i>abstracts</i>, livros,
-                    documentos. Software para tradução: <a href="https://omegat.org/">OmegaT</a> . Também trabalho com
-                    legendagem. Atualmente,
-                    estou fazendo Pós em Tradução na
+                    documentos. Software para tradução: <a href="https://omegat.org/">OmegaT</a>, <a href="https://www.sdltrados.com/">Trados</a> e <a href="https://www.smartcat.com/?utm_source=google&utm_medium=cpc&utm_campaign=EN_Brand&utm_term=smartcat&hsa_kw=smartcat&hsa_grp=24665534113&hsa_ver=3&hsa_net=adwords&hsa_mt=e&hsa_src=g&hsa_cam=370538953&hsa_acc=6400631428&hsa_ad=213078100943&hsa_tgt=kwd-60896128&gclid=CjwKCAiAiML-BRAAEiwAuWVggsUbDjoRpR8nUgOoe3Uw6Aqy1YUABn0CqwmZ5f89qSLzwLjQapuC9RoC_bEQAvD_BwE">Smartcat</a>. Também trabalho com
+                    legendagem. Pós-graduado em Tradução na
                     <a href="https://portal.fanese.edu.br/">Fanese</a>.
 
                 </p>
@@ -72,7 +71,7 @@
             <div class="service">
                 <h3>Web Developer</h3>
                 <p data-aos="fade-down">
-                    Comecei a estudar Python, Java e C em 2015 por hobby e, com isso, adquiri experiência no básico de
+                    Comecei a estudar Python, Java e C em 2015 (e ainda continuo estudando essas linguagens) por hobby e, com isso, adquiri experiência no básico de
                     lógica de programação. Foi desenvolvendo meu primeiro site em Flask (2019) que entrei em contato com
                     HTML. Depois disso, não mais parei de estudar e aprender front-end development. Depois de dominar
                     JavaScript, HTML5 e CSS3, estou me dedicando ao estudo do Vue.js.
@@ -109,7 +108,7 @@
             </p>
         </div>
         <img src="/jcgsr.github.io/img/semi-opened-laptop-computer-turned-on-on-table-2047905.jpg"
-            alt="Semi opened laptop" class="about-me__img">
+        alt="Semi opened laptop" class="about-me__img">
     </section>
 
     <!-- My Work -->
@@ -203,22 +202,22 @@
             </li>
             <li class="social-list__item">
                 <a href="https://api.whatsapp.com/send?phone=5579988284730&text=Entrar em contato"
-                    class="social-list__link">
-                    <i class="fab fa-whatsapp"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a href="https://facebook.com/cabral8guerra" class="social-list__link">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-            </li>
-        </ul>
-    </footer>
+                class="social-list__link">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+        </li>
+        <li class="social-list__item">
+            <a href="https://facebook.com/cabral8guerra" class="social-list__link">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+        </li>
+    </ul>
+</footer>
 
 
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="script.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
