--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <img src="/jcgsr.github.io/img/hcode.png" alt="Hcode-CalculadoraJS" class="portfolio__img">
             </a>
             <!-- Portfolio item 07 -->
-            <a href="https://tender-saha-c9254d.netlify.app/#/" class="portfolio__item">
+            <a href="https://www.susipessoa.com.br/" class="portfolio__item">
                 <img src="/jcgsr.github.io/img/susi.png" alt="Susi" class="portfolio__img">
             </a>
 
