--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 <img src="/jcgsr.github.io/img/afinadorWebApp.png" alt="Afinador de Violão" class="portfolio__img">
             </a>
             <!-- Portfolio item 05 -->
-            <a href="https://tender-easley-994bf4.netlify.com/" class="portfolio__item">
-                <img src="/jcgsr.github.io/img/imcWebApp.png" alt="IMC" class="portfolio__img">
+            <a href="https://www.meusescritos.com.br/" class="portfolio__item">
+                <img src="/jcgsr.github.io/img/meusescritos.png" alt="Meus Escritos" class="portfolio__img">
             </a>
             <!-- Portfolio item 06 -->
             <a href="https://naughty-wescoff-cae4d2.netlify.com/" class="portfolio__item">
